--- a/readme
+++ b/readme
@@ -20,3 +20,11 @@ update 30/12/2023 - by cleiton meurer
 -changed script to support ipv6
 -removed $SOCKFILE check replaced with a sudo check
 -changed error return locations to top of page
+
+# Was this script helpful to you? Please donate:
+
+PayPal: alex@alexandermirvis.com
+
+CashApp / Venmo: LynxGeekNYC
+
+BitCoin: bc1q8sthd96c7chhq5kr3u80xrxs26jna9d8c0mjh7
